correção na apresentação dos resultados da simulação

--- a/src/pages/simula/simula.html
+++ b/src/pages/simula/simula.html
@@ -11,94 +11,55 @@
   <div class="container">
 
 	  <ion-item>
-      <ion-label stacked>Resultado da simulação</ion-label>
-      <ion-input 
-        type="number">{{resultadoSimulacao}}
-      </ion-input>
+      <ion-label stacked>Resultado da simulação R$ {{resultadoSimulacao}}</ion-label>
     </ion-item>
 
     <ion-item>
-      <ion-label stacked>Rendimento total</ion-label>
-      <ion-input 
-        type="number">{{rendimentoTotal}}
-      </ion-input>
+      <ion-label stacked>Rendimento total R$ {{rendimentoTotal}}</ion-label>
     </ion-item>
 
     <ion-item>
-        <ion-label stacked>Valor aplicado inicialmente</ion-label>
-        <ion-input 
-          type="number">{{montanteInvestido}}
-        </ion-input>
+        <ion-label stacked>Valor aplicado R$ {{montanteInvestido}}</ion-label>
     </ion-item>
 
     <ion-item>
-        <ion-label stacked>Valor bruto do investimento</ion-label>
-        <ion-input 
-          type="number">{{rendimentoTotal}}
-        </ion-input>
+        <ion-label stacked>Valor bruto do investimento R$ {{rendimentoTotal}}</ion-label>
     </ion-item>
 
     <ion-item>
-        <ion-label stacked>Valor do rendimento</ion-label>
-        <ion-input 
-          type="number">{{rendimentoTotal}}
-        </ion-input>
+        <ion-label stacked>Valor do rendimento R$ {{rendimentoTotal}}</ion-label>
     </ion-item>
 
     <ion-item>
-        <ion-label stacked>IR sobre o investimento</ion-label>
-        <ion-input 
-          type="text">{{taxaIR}} ({{taxaIRporcent}}%)
-        </ion-input>
+        <ion-label stacked>Imposto de Renda R$ {{taxaIR}} ({{taxaIRporcent}}%)</ion-label>
     </ion-item>
 
     <ion-item>
-        <ion-label stacked>Valor líquido do investimento</ion-label>
-        <ion-input 
-          type="text">{{montanteLiquido}}
-        </ion-input>
+        <ion-label stacked>Valor líquido R$ {{montanteLiquido}}</ion-label>
     </ion-item>
 
     <ion-item>
-        <ion-label stacked>Data de resgate</ion-label>
-        <ion-input 
-          type="text">{{dataResgaste}}
-        </ion-input>
+        <ion-label stacked>Data de resgate: {{dataResgaste}}</ion-label>
     </ion-item>
 
     <ion-item>
-        <ion-label stacked>Dias corridos</ion-label>
-        <ion-input 
-          type="text">{{diasCorridos}}
-        </ion-input>
+        <ion-label stacked>Dias corridos: {{diasCorridos}}</ion-label>
     </ion-item>
 
     <ion-item>
-        <ion-label stacked>Rendimento mensal</ion-label>
-        <ion-input 
-          type="text">{{rendimentoMensal}}%
-        </ion-input>
+        <ion-label stacked>Rendimento mensal {{rendimentoMensal}}%</ion-label>
     </ion-item>
 
     <ion-item>
-        <ion-label stacked>Percentual do CDI do papel</ion-label>
-        <ion-input 
-          type="text">{{taxaCDI}}%
-        </ion-input>
+        <ion-label stacked>Percentual do CDI do papel {{taxaCDI}}%</ion-label>
     </ion-item>
 
     <ion-item>
-        <ion-label stacked>Rentabilidade anual</ion-label>
-        <ion-input 
-          type="text">{{rentAnual}}%
-        </ion-input>
+        <ion-label stacked>Rentabilidade anual {{rentAnual}}%</ion-label>
     </ion-item>
 
     <ion-item>
-        <ion-label stacked>Rentabilidade no período</ion-label>
-        <ion-input 
-          type="text">{{rentPeriodo}}%
-        </ion-input>
+        <ion-label stacked>Rentabilidade no período {{rentPeriodo}}%</ion-label>
     </ion-item>
   
   </div>
