start re-write and cleanup

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
         </ion-input>
       </ion-item>
 
-	  <ion-label text-wrap>Qual a data de vencimento do investimento? *</ion-label>
+	  <ion-label text-wrap>Qual data você quer resgatar o investimento? *</ion-label>
       <ion-item>
         <ion-input [(ngModel)]="data"
                    type="date"
